tests-build/tests/fail/net_without_udp_missing_udp.rs
use tests_build::tokio_net::udp;

fn main() {}

